Adicionando CRUD de consultas